Allow search gift by categoryId
* gifts search by category Id

* update countAllBy function

* update

* update swagger

---------
